--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.0.4",
+    "uuid": "^9.0.1",
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^5.24.1",
     "class-variance-authority": "^0.7.0",
@@ -35,6 +36,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
     "@types/react-datepicker": "^6.0.1",
