--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flex-pack-crm",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,13 +15,13 @@
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.0.4",
-    "uuid": "^9.0.1",
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^5.24.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "compression": "^1.7.4",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.344.0",
@@ -33,14 +33,15 @@
     "recharts": "^2.12.2",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.1.0",
+    "uuid": "^9.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.8",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
     "@types/react-datepicker": "^6.0.1",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
