--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: pedroconda/crm-probolsas  # Usar imagen existente sin tag específico
-    command: ["sh", "-c", "ls -la && echo 'Iniciando servidor en modo debug' && node server.js"]  # Comando de depuración
+    # No especificamos una imagen externa, usamos la construcción local
     networks:
       - probolsas
     ports:
