--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: pedroconda/crm-probolsas:production
+    image: crm-probolsas:latest
     ports:
       - "3000:3000"
     networks:
       - probolsas
-    environment:
-      - NODE_ENV=production
-      - PORT=3000
-      # Variables de entorno para Supabase (comentadas por defecto)
-      # - SUPABASE_URL=https://your-project.supabase.co
-      # - SUPABASE_KEY=your-supabase-key
-    env_file:
-      - .env.production
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -32,22 +24,10 @@ services:
         - "traefik.http.routers.crm.tls.certresolver=letsencrypt"
         - "traefik.http.services.crm.loadbalancer.server.port=3000"
       restart_policy:
-        condition: any
+        condition: on-failure
         delay: 5s
-        max_attempts: 5
+        max_attempts: 3
         window: 120s
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 512M
-        reservations:
-          cpus: '0.1'
-          memory: 128M
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
 networks:
   probolsas:
