--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,9 @@ version: '3.8'
 
 services:
   crm-app:
-    image: nginx:alpine
-    configs:
-      - source: nginx_conf
-        target: /etc/nginx/conf.d/default.conf
-      - source: app_content
-        target: /usr/share/nginx/html/index.html
+    # Usar una imagen preexistente de Docker Hub
+    image: pedroconda/crm-probolsas:latest
+    # Sin configs, sin volumes, sin build
     networks:
       - probolsas
     deploy:
@@ -17,12 +14,11 @@ services:
         - "traefik.http.routers.crm.entrypoints=websecure"
         - "traefik.http.routers.crm.tls.certresolver=letsencrypt"
         - "traefik.http.services.crm.loadbalancer.server.port=80"
-
-configs:
-  nginx_conf:
-    file: ./nginx.conf
-  app_content:
-    file: ./dist/index.html
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+        window: 120s
 
 networks:
   probolsas:
