--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   crm-app:
-    # Usar una imagen preexistente de Docker Hub
-    image: pedroconda/crm-probolsas:latest
-    # Sin configs, sin volumes, sin build
+    build: .
     networks:
       - probolsas
     deploy:
